--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
+*{
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: sans-serif;
+  background: rebeccapurple;
+  color: aliceblue;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.text-center{
+  text-align: center;
+}
+
+.container{
+  width: 60%;
+  margin: 10% auto;
+}
+
+.listItems{
+  background: aliceblue;
+  color: rebeccapurple;
+}
+
+.listItems p{
+  margin: 0;
+  text-align: center;
+  padding: 10px 0px;
+}
+
+.listItems span{
+  display: inline-block;
+  text-align: center;
+  padding: 10px 0px;
+  font-size: 20px;
+  border: 0.3px solid white;
+}
+
+.listItems span.title{
+  background: rebeccapurple;
+  color: white;
+}
+
+.listItems span.name, form input[type=text]{
+  width: 60%;
+}
+
+.listItems span.age, form input[type=number]{
+  width: 30%;
+}
+
+.listItems span.action, form input[type=submit]{
+  width: 10%;
+}
+
+.listItems span.icon{
+  color: red;
+}
+
+form input{
+  padding: 10px;
+  background: white;
+  border: transparent;
+  border: 1px solid white;
+  
+}
+
+form input[type=submit]{
+  background: rgb(7, 156, 243);
+  border: 1px solid rgb(254, 255, 254);
+  color: aliceblue;
 }
